--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
         </div>
     </footer>
-    <script src="libs/jquery/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 
