--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                         <img src="img/THE%20BIKE%20SHOPlight.svg" alt="" width="160" height="50">
                     </div>
                     <nav class="index-nav header-nav">
+                        <button class="index-nav-icon hidden-md hidden-lg">
+			                <span></span>
+                        </button>
                         <ul>
                             <li class="index-nav-first">
                                 <a href="" class="index-nav-link first-nav-link">BICYCLES</a>
@@ -97,6 +100,7 @@
                    </a></li>
                         </ul>
                     </nav>
+                    
                 </div>
             </div>
         </div>
@@ -250,7 +254,7 @@
             </div>
         </div>
     </footer>
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-3.2.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 
